# mmoi-backup

isam2/: CMakeLists.txt  README.txt  TODO.txt  package.xml
isam2/include/isam2/: isam2.h
isam2/msg/: Range.msg  StampedXYT.msg
isam2/src/: agent1_isam.cpp  agent1_isam2_node.cpp  dead_reckoning.cpp  isam2.cpp  isam2_node.cpp  isam_skeleton.cpp
path_following_turtle/: CMakeLists.txt  HARDWARE_INFO.txt  README.txt  package.xml  turtle_env.sh
path_following_turtle/bags/: agent1_opti_wave_2016-07-06-11-23-11.bag  agent2_opti_wave_2016-07-06-11-29-27.bag  waves_minimal.bag
path_following_turtle/cfg/: resetParams.cfg
path_following_turtle/include/path_follower/: path_generator_functions.h  pure_pursuit_functions.h  sys_params.h
path_following_turtle/include/path_following_turtle/: path_following_turtle.h
path_following_turtle/include/turtlebot_bringup/launch/: minimal.launch
path_following_turtle/include/turtlebot_bringup/launch/includes/: robot.launch.xml
path_following_turtle/launch/: PFT.launch  bagger.launch  gazebo_world.launch  initialize_gazebo.launch  initialize_optitrack.launch  offline_bringup.launch  opti_bagger.launch
path_following_turtle/launch/include/: agents.launch.xml  bringup_agent1.launch  bringup_agent2.launch  kobuki.launch.xml  kobuki_offline.launch.xml  offline_agents.launch.xml  online_agent_bringup.launch.xml  transformer.launch
path_following_turtle/msg/: StampedXYT.msg
path_following_turtle/param/: pid_kobuki_mux.yaml
path_following_turtle/src/: agent1_state_getter_node.cpp  agent2_state_getter_node.cpp  agent_1_straight_line_node.cpp  agent_1_wave_follower.cpp  agent_2_straight_line_node.cpp  agent_2_wave_follower.cpp  gazebo_model_reset_node.cpp  opti_agent_1_straight_line_node.cpp  opti_agent_1_wave_follower.cpp  opti_agent_2_straight_line_node.cpp  opti_agent_2_wave_follower.cpp  path_generator_functions.cpp  pure_pursuit_functions.cpp
sensors_simulator/: CMakeLists.txt  README.txt  package.xml
sensors_simulator/include/sensors_simulator/: sensors_simulator.h
sensors_simulator/launch/: gazebo.launch  optiTrack.launch
sensors_simulator/msg/: StampedCmd.msg  StampedOptiTrackPoses.msg
sensors_simulator/src/: gazebo_range_node.cpp  opti_data_node.cpp  opti_range_node.cpp  ros_vrpn_client.cpp  stamped_controls_agent1_node.cpp  stamped_controls_agent2_node.cpp
sensors_simulator/vrpn/: vrpn.sln
sensors_simulator/vrpn/server_src/: test_freespace.vcproj
