<?xm version="1.0"?>
<package>
	<name>isam2</name>
	<version>0.0.0</version>
	<maintainer email="daman@todo.todo">daman</maintainer>
	<description>
		Package designed to run the GTSAM (libraries developed by the Borg Lab) in ROS
	</description>
	<author>
		Hunter Young
	</author>
	<license>New BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>bullet</build_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>gazebo_msgs</build_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>genmsg</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>bullet</run_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>gazebo_msgs</run_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>message_generation</run_depend>
	<run_depend>genmsg</run_depend>


	<export> </export>
</package>
